<resources>
    <string name="app_name">NextGen Sdk</string>

    <string name="entrance_screen">Entrance Screen</string>
    <string name="language_screen">Language Screen</string>
    <string name="onboarding_screen">OnBoarding Screen</string>
    <string name="dashboard_screen">Dashboard Screen</string>
    <string name="feature_one_screen">Feature One Screen</string>
    <string name="feature_two_screen">Feature Two Screen</string>
    <string name="exit_screen">Exit Screen</string>

    <string name="_continue">Continue</string>
    <string name="feature_one">Feature One</string>
    <string name="feature_two">Feature Two</string>
    <string name="menu_one">Menu One</string>
    <string name="menu_two">Menu Two</string>
</resources>